<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     >


    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="match_parent"
        android:background="@drawable/login_background"
        tools:context="com.momskitchen.Login_Activity">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_24"
                android:layout_marginRight="@dimen/margin_24"

                android:orientation="vertical">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_edt"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/mobile"
                    android:inputType="phone"

                    android:paddingBottom="@dimen/margin_12"
                    android:paddingLeft="@dimen/margin_10"
                    android:paddingRight="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_12"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/font_16" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/bg_edt"
                    android:fontFamily="sans-serif-condensed"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:paddingBottom="@dimen/margin_12"
                    android:paddingLeft="@dimen/margin_10"
                    android:paddingRight="@dimen/margin_10"
                    android:paddingTop="@dimen/margin_12"
                    android:textColor="@color/text_color"
                    android:textSize="@dimen/font_16" />

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/btn_background"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:paddingBottom="@dimen/margin_8"
                    android:paddingTop="@dimen/margin_8"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/font_16" />

                <Button
                    android:id="@+id/btn_registration"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_8"
                    android:background="@drawable/bg_reg"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:paddingBottom="@dimen/margin_8"
                    android:paddingTop="@dimen/margin_8"
                    android:text="@string/registration"
                    android:textAllCaps="false"
                    android:textColor="@color/btn_color"
                    android:textSize="@dimen/font_16" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_40"
                    android:layout_marginTop="@dimen/margin_5"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv_forgot"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:text="@string/forgot"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/font_16"
                        android:transitionName="Forgot" />

                    <TextView
                        android:id="@+id/tv_signInLater"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:gravity="end"
                        android:text="@string/signInLater"
                        android:textColor="@color/text_color"
                        android:textSize="@dimen/font_16" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>