<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_main_fragmnt">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:id="@+id/liner_tarin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_pick_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_pickup" />


            <Button
                android:id="@+id/btn_pick_up"
                android:layout_width="140dp"
                android:layout_height="34dp"
                android:gravity="center"
                android:background="@drawable/rounded_tv"
                android:text="@string/pickup"
                android:paddingTop="4dp"
                android:layout_marginTop="10dp"

                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textSize="@dimen/font_18" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/linr_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitCenter"
                android:src="@mipmap/btn_home_delivery" />


            <Button
                android:id="@+id/btn_home"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:background="@drawable/rounded_tv"
                android:text="@string/home_deliver"
                android:gravity="center"
                android:textAllCaps="false"
            android:layout_marginTop="-10dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="@dimen/font_18"
                android:textColor="@color/white"
                 />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linr_pick_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_train"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/btn_train_delivery" />
            <Button
                android:id="@+id/btn_train"
                android:layout_width="140dp"
                android:layout_height="34dp"
                android:gravity="center"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_tv"
                android:text="@string/train_deliver"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"
                android:textSize="@dimen/font_18"></Button>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>